# easy-aiogram-bot-template

./: .env.example  .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml
alembic/: env.py
alembic/versions/: 001_initial_migration.py
locales/: messages.pot
locales/en/LC_MESSAGES/: messages.mo  messages.po
nginx/initial/: default.conf.template
nginx/templates/: default.conf.template
src/bot/: main.py
src/bot/core/: config.py  settings.py
src/bot/exceptions/: __init__.py
src/bot/filters/: admin.py  input_type.py  media.py  text_length.py
src/bot/handlers/: __init__.py  bot_commands.py  is_member.py  start_handler.py
src/bot/keyboards/: calls.py  constructor.py  inline.py  layout.py
src/bot/middlewares/: PostgresI18nMiddleware.py  logging.py
src/bot/models/: __init__.py  base.py  user.py
src/bot/repositories/: base.py  user.py
src/bot/states/: state.py
src/bot/utils/: __init__.py  localization.py  logging.py  pg_session.py  postgres_settings.py  smart_sesion.py  stogare_settings.py  webhook_settings.py
src/server/controllers/: __init__.py  user_controller.py
src/server/schemas/: base_schema.py  user_schema.py
src/server/services/: user_service.py
tests/: test_env.py  test_polling.py  test_required_packages.py  test_webhook.py
