[tool.pytest.ini_options]
testpaths = ["src/bot/tests"]
python_classes = "Test*"
python_functions = "test_*"
markers = ["asyncio"]

[tool.poetry]
name = "easy-aiogram-bot"
version = "0.1.0"
description = ""
authors = ["andreiserdukov <serdukow1@gmail.com>"]
readme = "README.md"
license = "LICENSE"

[tool.poetry.dependencies]
python = "3.12.3"
environs = "^11.2.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
