[tool.pytest.ini_options]
testpaths = ["tests"]
python_classes = "Test*"
python_functions = "test_*"
markers = ["asyncio"]

[tool.poetry]
name = "easy-aiogram-bot"
version = "0.1.0"
description = ""
authors = ["andreiserdukov <serdukow1@gmail.com>"]
readme = "README.md"
license = "LICENSE"

[tool.poetry.dependencies]
python = "3.12.3"
environs = "^11.2.1"
structlog = "^24.4.0"
sqlalchemy = "^2.0.37"
orjson = "^3.10.14"
pytz = "^2024.2"
fastapi = "^0.115.6"
fastapi-restful = "^0.6.0"
uvicorn = "^0.34.0"
pytest = "^8.3.4"
babel = "^2.16.0"
aiogram = "^3.17.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
